July 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Config screen now shows "disabled" as the autosave interval if it's zero and
	  "1 turn" if it's one (not "1 turns")
	* LOS is now updated immediately when perception is naturally increased;
	  previously you had to move before the sight range was increased
	* RaiseStats and LowerStats cheats now work correctly when one is polymorphed into
	  a nonhumanoid
	* Fixed an AP system bug that caused the AI of stationary monsters (most Attnamians
	  and carnivorous plants) to be run each tick instead of each turn, thus slowing
	  down the game considerably
	* Corrected the Great Attnamian Blitzkrieg Bug added by the last commit

July 21 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* typeid calls replaced with GetClassId()s, thus making the script error messages of a
	  gcc compiled binary a bit less bizarre
	* Weight and Volume cache system remade
	* Equipment no longer increases HP
	* Corpses' weights now work
	* Emitation cache system added
	* Emitation updating is now handled correctly when items are wielded or worn
	* Fixed some other light system related minor problems
	* If reading is terminated because the light level drops, the game now prints a message
	  explaining what has happened
	* Scroll of create monster creates only one monster again (although I am not positively
	  sure whether that horde of monsters appearing was a bug or feature...)
	* Corrected a bug that caused that caused ESP-seen people on never seen squares to
	  darken after they were 'l'ooked at
	* HP and MaxHP of characters cached
	* Master and MaxHP of bodyparts cached
	* Added parentheses around the MAKE_RGB macro, because conditional expressions of the form
	  if(Color == MAKE_RGB(R, G, B)) caused a syntax error without it
	* Added a powerful colorized font cache system
	* Optimized weaponskill::Tick(), Regenerate functions, MainMaterial handling routines,
	  gear retrieval functions, and so on...

July 16 2002 Timo Kiviluoto <sonor@phpoint.fi>
